--- a/Hungarian.lng
+++ b/Hungarian.lng
@@ -219,7 +219,7 @@
 |&Print...|
 |Nyom&tatás...|
 |&Export To|
-|&Exporálás|
+|&Exportálás|
 |&Lock Workspace|
 |Munkaterület &zárolása|
 |&Unlock Workspace|
